Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z13.java
/*
 * @test /nodynamiccopyright/
 * @bug 4865660
 * @summary implement "metadata" (attribute interfaces and program annotations)
 * @author gafter
 *
 * @compile/fail/ref=Z13.out -XDrawDiagnostics  Z13.java
 */

@interface An {
    int a() throws NullPointerException;
}
