Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z13.out
Z13.java:11:20: compiler.err.throws.not.allowed.in.intf.annotation
1 error
